--- a/secret_gdvcxvdsfvjnfkjdfkvndf/style.css
+++ b/secret_gdvcxvdsfvjnfkjdfkvndf/style.css
@@ -2,7 +2,7 @@ body {
 	background-color: rgb(35, 35, 40);
 }
 #top {
-	position: absolute;
+	position: fixed;
 	color: #8cff76;
 	top: 0;
 	left: 0;
@@ -14,10 +14,16 @@ body {
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
 	border-bottom-color: rgb(20, 20, 26);
+    z-index: 999;
 }
 #logo {
 	font-family: "Rubik", sans-serif;
 	font-size: 32px;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #tabs {
@@ -42,6 +48,23 @@ body {
 	font-family: monospace;
 }
 
+.tab:hover {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: initial;
+	top: 10px;
+	padding: 10px;
+	height: 16px;
+	width: 75px;
+	font-size: 14px;
+	font-family: monospace;
+	color: white;
+}
+
 .selectedtab {
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -64,11 +87,35 @@ body {
 	font-family: monospace;
 }
 
+.selectedtab:hover {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: initial;
+	top: 10px;
+	background-color: rgb(37, 37, 39);
+	padding: 10px;
+	border-bottom: 2px;
+	border-bottom-color: #59FF00;
+	border-bottom-style: solid;
+	border-top: 1px;
+	border-top-color: #353535;
+	border-top-style: solid;
+	height: 20px;
+	width: 75px;
+	font-size: 14px;
+	font-family: monospace;
+	color: white;
+}
+
 #window {
-	top: 50px;
+	top: 55px;
 	position: fixed;
 	width: 100%;
 	height: 100%;
+	left: 0;
 }
 
 #vl {
@@ -80,4 +127,93 @@ body {
 	height: 54px;
 	top: 0px;
 	left: 340px;
+}
+
+#footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 20px;
+	background-color: rgb(30, 30, 33);
+	border-top-width: 1px;
+	border-top-style: solid;
+	border-top-color: rgb(20, 20, 26);
+	color: gray;
+	font-family: monospace;
+	left: 0px;
+	font-size: 11px;
+    z-index: 999;
+}
+
+#customfooter {
+	position: absolute;
+	left: 350px;
+	width: 100%;
+	height: 100%;
+}
+
+#vl2 {
+	border-left-color: #313131;
+	border-left-style: solid;
+	border-left-width: 1px;
+	position: absolute;
+	width: 10px;
+	height: 20px;
+	bottom: 0px;
+	left: 340px;
+}
+
+#terminal-btn {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: absolute;
+	left: 5px;
+	bottom: -2px;
+	width: 70px;
+	height: 100%;
+	padding: 1px;
+}
+
+#terminal-btn:hover {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: absolute;
+	left: 5px;
+	bottom: -2px;
+	background-color: #353535;
+	width: 70px;
+	height: 100%;
+	padding: 1px;
+}
+
+#terminal-btn > span {
+	bottom: 6px;
+	position: absolute;
+	left: 20px;
+}
+
+.close-btn {
+    top: 1px;
+    right: 1px;
+    color: dimgray;
+    background-color: rgba(0,0,0,0);
+    font-size: 16px;
+    border-style: none;
+    padding: 0;
+}
+
+.close-btn:hover {
+    top: 1px;
+    right: 1px;
+    color: #7f3835;
+    background-color: rgba(0,0,0,0);
+    font-size: 16px;
+    border-style: none;
+    padding: 0;
 }
