--- a/style.css
+++ b/style.css
@@ -1,95 +1,337 @@
-#particles{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    text-align: center;
+body {
+	background-color: rgb(35, 35, 40);
+}
+#top {
+	position: fixed;
+	color: #8cff76;
+	top: 0;
+	left: 0;
+	padding: 10px;
+	width: 100%;
+	height: 34px;
+	font-family: 'Open Sans', sans-serif;
+	background-color: rgb(30, 30, 33);
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: rgb(20, 20, 26);
+    z-index: 999;
+}
+#logo {
+	font-family: "Rubik", sans-serif;
+	font-size: 32px;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-button {
-    position: absolute;
-    padding: 7px 7px 10px;
-    background-color: rgba(100,100,100,0.1);
-    border-style: solid;
-    border-color: #59FF00;
-    border-radius: 3px;
-    border-width: 1px;
-    font-family: monospace;
-    color: rgba(255,255,255, 0.6);
-    height: 30px;
+#tabs {
+	position: absolute;
+	top: 39%;
+	left: 350px;
 }
 
-button:hover {
-    position: absolute;
-    padding: 7px 7px 10px;
-    background-color: rgba(65, 189, 0, 0.2);
-    border-style: solid;
-    border-color: #59FF00;
-    border-radius: 3px;
-    border-width: 1px;
-    font-family: monospace;
-    color: white;
-    height: 30px;
+.tab {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: initial;
+	top: 10px;
+	padding: 10px;
+	height: 16px;
+	width: 75px;
+	font-size: 14px;
+	font-family: monospace;
 }
 
-canvas {
-    height: auto;
-    width: 100%;
-    background-color: rgb(35, 35, 40);
+.tab:hover {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: initial;
+	top: 10px;
+	padding: 10px;
+	height: 16px;
+	width: 75px;
+	font-size: 14px;
+	font-family: monospace;
+	color: white;
 }
 
-#login {
-    background-color: rgba(50, 50, 56, 0.9);
-    position: absolute;
-    top: 25%;
-    left: 37%;
-    width: 25%;
-    height: 100px;
-    padding: 15px;
-    border-radius: 3px;
+.selectedtab {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: initial;
+	top: 10px;
+	background-color: rgb(37, 37, 39);
+	padding: 10px;
+	border-bottom: 2px;
+	border-bottom-color: #59FF00;
+	border-bottom-style: solid;
+	border-top: 1px;
+	border-top-color: #353535;
+	border-top-style: solid;
+	height: 20px;
+	width: 75px;
+	font-size: 14px;
+	font-family: monospace;
 }
 
-#login > * {
-    left: 10px;
-    position: absolute;
-    font-size: 15px;
+.selectedtab:hover {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: initial;
+	top: 10px;
+	background-color: rgb(37, 37, 39);
+	padding: 10px;
+	border-bottom: 2px;
+	border-bottom-color: #59FF00;
+	border-bottom-style: solid;
+	border-top: 1px;
+	border-top-color: #353535;
+	border-top-style: solid;
+	height: 20px;
+	width: 75px;
+	font-size: 14px;
+	font-family: monospace;
+	color: white;
 }
 
-#login > span {
-    color: white;
+#window {
+	top: 55px;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
 }
 
-body > * {
-    font-family: monospace;
+#vl {
+	border-left-color: #313131;
+	border-left-style: solid;
+	border-left-width: 1px;
+	position: absolute;
+	width: 10px;
+	height: 54px;
+	top: 0px;
+	left: 340px;
 }
 
-#logintop {
-    position: absolute;
-    left: 37%;
-    top: 5%;
+#footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 20px;
+	background-color: rgb(30, 30, 33);
+	border-top-width: 1px;
+	border-top-style: solid;
+	border-top-color: rgb(20, 20, 26);
+	color: gray;
+	font-family: monospace;
+	left: 0px;
+	font-size: 11px;
+    z-index: 999;
 }
 
-#logintop > h2 {
-    color: white;
-    position: absolute;
-    left: 100px;
+#customfooter {
+	position: absolute;
+	left: 350px;
+	width: 100%;
+	height: 100%;
+	bottom: -3px;
 }
 
-#logintop > small {
-    color: rgba(255, 255, 255, 0.5);
-    position: absolute;
-    left: 100px;
-    top: 40px;
-    width: max-content;
+#vl2 {
+	border-left-color: #313131;
+	border-left-style: solid;
+	border-left-width: 1px;
+	position: absolute;
+	width: 10px;
+	height: 20px;
+	bottom: 0px;
+	left: 340px;
 }
 
-input {
-    background-color: rgb(70, 70, 80);
-    border: none;
-    border-radius: 2px;
-    font-family: monospace;
-    width: 90%;
-    padding: 5px 3px;
-    color: gray;
+#terminal-btn {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: absolute;
+	left: 5px;
+	bottom: -2px;
+	width: 70px;
+	height: 100%;
+	padding: 1px;
+}
+
+#terminal-btn:hover {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: absolute;
+	left: 5px;
+	bottom: -2px;
+	background-color: #353535;
+	width: 70px;
+	height: 100%;
+	padding: 1px;
+}
+
+#terminal-btn > span {
+	bottom: 6px;
+	position: absolute;
+	left: 20px;
+}
+
+.close-btn {
+    top: 1px;
+    right: 1px;
+    color: dimgray;
+    background-color: rgba(0,0,0,0);
+    font-size: 16px;
+    border-style: none;
+    padding: 0;
+}
+
+.close-btn:hover {
+    top: 1px;
+    right: 1px;
+    color: #7f3835;
+    background-color: rgba(0,0,0,0);
+    font-size: 16px;
+    border-style: none;
+    padding: 0;
+}
+
+#newtab {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	color: #313131;
+	font-weight: bold;
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+	font-size: 28px;
+	left: 105%;
+	top: -8px;
+}
+
+#newtab:hover {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	color: dimgray;
+	font-weight: bold;
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+	font-size: 28px;
+	left: 105%;
+	top: -8px;
+}
+
+#console {
+	position: absolute;
+	z-index: 999999;
+	top: 60px;
+	right: 15px;
+	width: 300px;
+	height: 400px;
+	font-family: monospace;
+	display: inline-block;
+}
+
+#console > .log {
+	position: relative;
+	border-width: 1px;
+	border-radius: 5px;
+	border-style: solid;
+	border-color: #1f3366;
+	color: white;
+	background-color: #3967c6;
+	width: 99%;
+	height: auto;
+	overflow-wrap: break-word;
+	padding: 5px;
+}
+
+#console > .error {
+	position: relative;
+	border-width: 1px;
+	border-radius: 5px;
+	border-style: solid;
+	border-color: #541716;
+	color: white;
+	background-color: #f94341;
+	width: 99%;
+	height: auto;
+	overflow-wrap: break-word;
+	padding: 5px;
+}
+
+#console > .warn {
+	position: relative;
+	border-width: 1px;
+	border-radius: 5px;
+	border-style: solid;
+	border-color: #77491f;
+	color: white;
+	background-color: #e49329;
+	width: 99%;
+	height: auto;
+	overflow-wrap: break-word;
+	padding: 5px;
+}
+
+#console > * > * {
+	position: relative;
+	left: 1px;
+	top: -10px;
+	right: 5px;
+}
+
+.console-close-btn {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: absolute !important;
+	right: 2px !important;
+	color: indianred !important;
+	left: 96% !important;
+	font-size: 17px;
+	top: -5px !important;
+}
+
+.console-close-btn:hover {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: absolute !important;
+	left: 96% !important;
+	color: #cd352a !important;
+	font-size: 17px;
+	top: -5px !important;
 }
