--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 	border-bottom-color: rgb(20, 20, 26);
     z-index: 999;
 }
-#logo {
+.logo {
 	font-family: "Rubik", sans-serif;
 	font-size: 32px;
 	-webkit-user-select: none;
@@ -112,10 +112,10 @@ body {
 
 #window {
 	top: 55px;
-	position: fixed;
 	width: 100%;
 	height: 100%;
 	left: 0;
+	position: fixed;
 }
 
 #vl {
@@ -415,14 +415,15 @@ body {
 }
 
 #console {
-	position: absolute;
+	position: fixed;
 	right: 15px;
 	width: 300px;
 	height: auto;
-	font-family: monospace;
+	font-family: "Montserrat";
+    font-size: 13px;
 	display: inline-block;
-	top: 55px;
-	z-index: 2;
+	top: 60px;
+	z-index: 999999999;
 }
 
 #console > .log {
@@ -539,4 +540,57 @@ input {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+#beta {
+    top: 10px;
+    left: 179px;
+    position: absolute;
+}
+
+#top-btns {
+    top: 20px;
+    position: absolute;
+    left: 200px;
+    color: gray;
+    font-family: "Montserrat";
+    font-weight: bolder;
+}
+
+#top-btns > span {
+    height: 100%;
+    padding: 3px;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#top-btns > span:hover {
+    background-color: #313131;
+    height: 100%;
+    padding: 3px;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+::-webkit-scrollbar {
+    background-color: #1d1f21;
+    width: 7px;
+
+}
+::-webkit-scrollbar-track {
+    background-color: #1d1f21;
+    width: 7px;
+
+}
+
+::-webkit-scrollbar-thumb {
+    background: #353535;
+    width: 7px;
+    border-color: #20201d;
 }
