--- a/style.css
+++ b/style.css
@@ -24,12 +24,13 @@ body {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	font-style: initial;
 }
 
 #tabs {
 	position: absolute;
-	top: 39%;
-	left: 350px;
+	top: 42%;
+	left: 365px;
 }
 
 .tab {
@@ -126,7 +127,7 @@ body {
 	width: 10px;
 	height: 54px;
 	top: 0px;
-	left: 340px;
+	left: 350px;
 }
 
 #footer {
@@ -571,6 +572,7 @@ input {
     background-color: #313131;
     height: 100%;
     padding: 3px;
+    border-radius: 2px;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -593,4 +595,12 @@ input {
     background: #353535;
     width: 7px;
     border-color: #20201d;
+}
+
+#projectname {
+    width: 100px;
+    left: 230px;
+    text-align: right;
+    position: absolute;
+    bottom: 4px;
 }
